include/crispasr_session.h

// Whisper types (defined in whisper.h, forward-declared here so this
// header is self-contained without pulling in the full whisper API).
struct whisper_context;
struct whisper_full_params;
struct crispasr_diarize_seg_abi;
typedef struct crispasr_diarize_seg_abi crispasr_diarize_seg_abi;
struct crispasr_open_params_v1;
typedef struct crispasr_open_params_v1 crispasr_open_params_v1;
struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_stream;
typedef struct crispasr_stream crispasr_stream;
struct parakeet_context;
typedef struct parakeet_context parakeet_context;
struct parakeet_result;
typedef struct parakeet_result parakeet_result;
struct whisper_context;
typedef struct whisper_context whisper_context;
CRISPASR_SESSION_API void crispasr_params_set_language(whisper_full_params* p, const char* lang);
CRISPASR_SESSION_API void crispasr_params_set_translate(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_detect_language(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_token_timestamps(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_n_threads(whisper_full_params* p, int n);
CRISPASR_SESSION_API void crispasr_params_set_max_len(whisper_full_params* p, int n);
CRISPASR_SESSION_API void crispasr_params_set_best_of(whisper_full_params* p, int n);
CRISPASR_SESSION_API void crispasr_params_set_split_on_word(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_no_context(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_single_segment(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_print_realtime(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_print_progress(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_print_timestamps(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_print_special(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_suppress_blank(whisper_full_params* p, int v);
CRISPASR_SESSION_API void crispasr_params_set_temperature(whisper_full_params* p, float t);
CRISPASR_SESSION_API void crispasr_params_set_max_tokens(whisper_full_params* p, int n);
CRISPASR_SESSION_API void crispasr_params_set_initial_prompt(whisper_full_params* p, const char* prompt);
CRISPASR_SESSION_API int64_t crispasr_token_t0(whisper_context* ctx, int i_seg, int i_tok);
CRISPASR_SESSION_API int64_t crispasr_token_t1(whisper_context* ctx, int i_seg, int i_tok);
CRISPASR_SESSION_API float crispasr_token_p(whisper_context* ctx, int i_seg, int i_tok);
CRISPASR_SESSION_API void crispasr_params_set_alt_n(whisper_full_params* p, int n);
CRISPASR_SESSION_API int crispasr_token_n_alts(whisper_context* ctx, int i_seg, int i_tok);
CRISPASR_SESSION_API int32_t crispasr_token_alt_id(whisper_context* ctx, int i_seg, int i_tok, int i_alt);
CRISPASR_SESSION_API float crispasr_token_alt_p(whisper_context* ctx, int i_seg, int i_tok, int i_alt);
CRISPASR_SESSION_API int crispasr_token_alt_text(whisper_context* ctx, int i_seg, int i_tok, int i_alt, char* out,
                                                 int out_cap);
CRISPASR_SESSION_API float crispasr_detect_language(whisper_context* ctx, const float* pcm, int n_samples,
                                                    int n_threads, char* out_code, int out_cap);
CRISPASR_SESSION_API int crispasr_vad_segments(const char* vad_model_path, const float* pcm, int n_samples,
                                               int sample_rate, float threshold, int min_speech_ms, int min_silence_ms,
                                               int n_threads, bool use_gpu, float** out_spans);
// Returns the slice count (>= 0), or negative on error: -1 bad arguments,
// -2 allocation failed, -3 the VAD model could not be loaded. -3 matters
// because 0 ("loaded fine, found no speech") used to be the answer for a
// missing model too, which made every binding read a broken install as silence.
CRISPASR_SESSION_API int crispasr_vad_slices(const char* vad_model_path, const float* pcm, int n_samples,
                                             int sample_rate, float threshold, int min_speech_ms, int min_silence_ms,
                                             int speech_pad_ms, float max_chunk_duration_s, int n_threads,
                                             float** out_spans);
CRISPASR_SESSION_API void crispasr_vad_free(float* spans);
CRISPASR_SESSION_API int crispasr_lcs_dedup_prefix_count(const int32_t* prev_tail_tokens, int n_prev,
                                                         const int32_t* curr_tokens, int n_curr, int min_lcs_length);
CRISPASR_SESSION_API crispasr_stream* crispasr_stream_open(whisper_context* ctx, int n_threads, int step_ms,
                                                           int length_ms, int keep_ms, const char* language,
                                                           int translate);
CRISPASR_SESSION_API parakeet_context* crispasr_parakeet_init(const char* model_path, int n_threads, int use_flash);
CRISPASR_SESSION_API void crispasr_parakeet_free(parakeet_context* ctx);
CRISPASR_SESSION_API parakeet_result* crispasr_parakeet_transcribe(parakeet_context* ctx, const float* pcm,
                                                                   int n_samples, int64_t t_offset_cs);
CRISPASR_SESSION_API const char* crispasr_parakeet_result_text(parakeet_result* r);
CRISPASR_SESSION_API int crispasr_parakeet_result_n_words(parakeet_result* r);
CRISPASR_SESSION_API const char* crispasr_parakeet_result_word_text(parakeet_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_parakeet_result_word_t0(parakeet_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_parakeet_result_word_t1(parakeet_result* r, int i);
CRISPASR_SESSION_API int crispasr_parakeet_result_n_tokens(parakeet_result* r);
CRISPASR_SESSION_API const char* crispasr_parakeet_result_token_text(parakeet_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_parakeet_result_token_t0(parakeet_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_parakeet_result_token_t1(parakeet_result* r, int i);
CRISPASR_SESSION_API float crispasr_parakeet_result_token_p(parakeet_result* r, int i);
CRISPASR_SESSION_API void crispasr_parakeet_result_free(parakeet_result* r);
CRISPASR_SESSION_API int crispasr_detect_backend_from_gguf(const char* path, char* out_name, int out_cap);
CRISPASR_SESSION_API crispasr_session* crispasr_session_open_with_params(const char* model_path,
                                                                         const char* backend_name,
                                                                         const crispasr_open_params_v1* params);
CRISPASR_SESSION_API int crispasr_enhance_audio_rnnoise(const float* in_pcm, int32_t n_samples, float* out_pcm,
                                                        int32_t out_cap);
CRISPASR_SESSION_API int crispasr_text_detect_language(const char* text, const char* model_path, int32_t n_threads,
                                                       char* out_label_buf, int32_t out_label_cap,
                                                       float* out_confidence);
CRISPASR_SESSION_API void* crispasr_punc_init(const char* model_path);
CRISPASR_SESSION_API const char* crispasr_punc_process(void* ctx, const char* text);
CRISPASR_SESSION_API void crispasr_punc_free_text(const char* text);
CRISPASR_SESSION_API void crispasr_punc_free(void* ctx);
CRISPASR_SESSION_API void* crispasr_punc_init(const char*);
CRISPASR_SESSION_API const char* crispasr_punc_process(void*, const char*);
CRISPASR_SESSION_API void crispasr_punc_free_text(const char*);
CRISPASR_SESSION_API void crispasr_punc_free(void*);
CRISPASR_SESSION_API const char* crispasr_c_api_version(void);
CRISPASR_SESSION_API bool crispasr_kokoro_lang_is_german_abi(const char* lang);
CRISPASR_SESSION_API bool crispasr_kokoro_lang_has_native_voice_abi(const char* lang);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_model_for_lang_abi(const char* model_path, const char* lang,
                                                                    char* out_path, int out_path_len);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_fallback_voice_abi(const char* model_path, const char* lang,
                                                                    char* out_path, int out_path_len, char* out_picked,
                                                                    int out_picked_len);
CRISPASR_SESSION_API bool crispasr_kokoro_lang_is_german_abi(const char*);
CRISPASR_SESSION_API bool crispasr_kokoro_lang_has_native_voice_abi(const char*);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_model_for_lang_abi(const char*, const char*, char*, int);
CRISPASR_SESSION_API int crispasr_kokoro_resolve_fallback_voice_abi(const char*, const char*, char*, int, char*, int);
CRISPASR_SESSION_API void* crispasr_titanet_init(const char* model_path, int32_t n_threads);
CRISPASR_SESSION_API void crispasr_titanet_free(void* ctx);
CRISPASR_SESSION_API int32_t crispasr_titanet_embed(void* ctx, const float* pcm_16k, int32_t n_samples, float* out);
CRISPASR_SESSION_API float crispasr_titanet_cosine_sim(const float* a, const float* b, int32_t dim);
CRISPASR_SESSION_API void crispasr_speaker_db_free(void* db);
CRISPASR_SESSION_API int32_t crispasr_speaker_db_count(const void* db);
CRISPASR_SESSION_API float crispasr_speaker_db_match(const void* db, const float* embedding, int32_t dim,
                                                     float threshold, char* out_name, int32_t out_cap);
// Legacy (pre-#266) entry points — always refuse at runtime.
CRISPASR_SESSION_API void* crispasr_speaker_db_load(const char* dir_path);
CRISPASR_SESSION_API int32_t crispasr_speaker_db_enroll(const char* dir_path, const char* name, const float* embedding,
                                                        int32_t dim);
CRISPASR_SESSION_API void* crispasr_speaker_embedder_make_abi(const char* model_spec, int32_t n_threads,
                                                              const char* cache_dir);
CRISPASR_SESSION_API void crispasr_speaker_embedder_free_abi(void* embedder);
CRISPASR_SESSION_API int32_t crispasr_speaker_embedder_dim_abi(const void* embedder);
CRISPASR_SESSION_API int32_t crispasr_speaker_embedder_embed_abi(void* embedder, const float* pcm_16k,
                                                                 int32_t n_samples, float* out);
CRISPASR_SESSION_API const char* crispasr_speaker_embedder_name_abi(const void* embedder);
CRISPASR_SESSION_API int32_t crispasr_speaker_cluster_abi(const float* embeddings, int32_t n, int32_t dim,
                                                          float merge_threshold, int32_t max_speakers,
                                                          int32_t* labels_out);
CRISPASR_SESSION_API void* crispasr_pyannote_cache_compute_abi(const float* full_audio, int32_t n_samples,
                                                               const char* model_path, int32_t n_threads);
CRISPASR_SESSION_API void crispasr_pyannote_cache_free_abi(void* cache);
CRISPASR_SESSION_API int32_t crispasr_pyannote_cache_apply_abi(const void* cache, int64_t slice_t0_cs,
                                                               crispasr_diarize_seg_abi* segs, int32_t n_segs);